@@ -2,7 +2,7 @@
 Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Brightness plugin
-Comment=Control your LCD brightness
+_Comment=Control your LCD brightness
 Icon=gpm-brightness-lcd
 X-XFCE-Exec=@libexecdir@/xfce4/panel-plugins/xfce4-brightness-plugin
 X-XFCE-Unique=TRUE
