@@ -2,7 +2,7 @@
 Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Inhibit plugin
-Comment=Inhibit automatic power saving
+_Comment=Inhibit automatic power savings
 Icon=gnome-inhibit-applet
 X-XFCE-Exec=@libexecdir@/xfce4/panel-plugins/xfce4-inhibit-plugin
 X-XFCE-Unique=TRUE
