@@ -1,4 +1,7 @@
 
+2009-04-06  8:45 Ali aliov@xfce.org 
+	 * : Fix untranslated panel plugins comment
+
 2009-04-05 21:06 Ali aliov@xfce.org 
 	 * : The battery critical level was not shown correctly in the settings dialog
 
